<resources>
    <string name="app_name">RecipeApp</string>
    <string name="ingredients">Ingredients</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipename">RecipeName</string>
    <string name="_8_serving">8 Serving</string>
    <string name="ingredient_icon">Ingredient icon</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="next_step">Next Step</string>
    <string name="previous_step">Previous Step</string>
    <string name="recipe_step">Recipe Step</string>
    <string name="description">Description</string>
    <string name="ooops">Ooops!</string>
    <string name="NoInternet">Slow or no internet connection \nCheck your internet settings.</string>
    <string name="try_again">Try Again</string>
</resources>
